--- a/css/styles.css
+++ b/css/styles.css
@@ -1,82 +1,329 @@
-.container{
-    display: flex; 
-    height: 100%; 
-    width: 100%; 
-    align-items: center; 
-    justify-content: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-.grid{
-    display: grid; 
-    height: 100dvh; 
-    width: 100dvw; 
-    grid-template-columns: repeat(3, 1fr); 
-    grid-template-rows: 100px repeat(3, 1fr) 100px; 
-    gap: 16px; 
-    background-color: #eee;
-    margin: .4rem; 
-    padding: .4rem; 
-    border-radius: 10px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1);
+
+body{
+    background-color: #f4f4f2;
+    font-weight: 800;
+    font-size: 1.5rem;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* Estilos Estructurales */
+.container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 150px repeat(3,1fr) 150px;
+    height: calc(100dvh - 1.6rem);
+    width: calc(100dvw - 1.6rem);
+    margin: .5rem;
+    padding: .3rem;
+    background-color: #d4d4d2;
+    border-radius: 10px;
+    gap: 10px;
 }
 header{
-    font-family: 'M PLUS 2 Variable', sans-serif; 
-    grid-column: span 3; 
-    grid-row: span 1; 
-    background-color: rgba(255, 182, 193, 0.5); 
-    border-radius: 8px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); 
-    display: flex; 
-    align-items: center; 
-    justify-content: center;
+    grid-column: 1/5;
+    border-radius: 10px;
 }
 main{
-    height: 100%;
-    width: 100%;
+    grid-column: 1/4;
+    grid-row: 2/5;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 10px;
 }
 .insert{
-    font-family: 'M PLUS 2 Variable', sans-serif; 
-    grid-column: span 1; 
-    grid-row: span 2; 
-    background-color: rgba(173, 255, 47, 0.5); 
-    border-radius: 8px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); 
-    display: flex; 
-    align-items: center; 
-    justify-content: center;
+    grid-column: 1/3;
+    grid-row: 1/4;
+    border-radius: 10px;
 }
 .consult{
-    font-family: 'M PLUS 2 Variable', sans-serif; 
-    grid-column: span 1; 
-    grid-row: span 2; 
-    background-color: rgba(255, 255, 224, 0.5); 
-    border-radius: 8px; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); 
-    display: flex; 
-    align-items: center; 
-    justify-content: center;
+    grid-column: 3/6;
+    grid-row: 1/4;
+    border-radius: 10px;
 }
-aside{
-    font-family: 'M PLUS 2 Variable', sans-serif; 
-    grid-column: span 1; 
-    grid-row: span 3; 
-    background-color: rgba(210, 180, 140, 0.5); 
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); 
-    display: flex; 
-    align-items: center; 
-    justify-content: center;
-}
-.toggle{
-    font-family: 'M PLUS 2 Variable', sans-serif; grid-column: span 1; grid-row: span 1; background-color: rgba(144, 238, 144, 0.5); border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); display: flex; align-items: center; justify-content: center;
+.switch-mode{
+    grid-column: 1/2;
+    grid-row: 4/5;
+    border-radius: 10px;
 }
 .generate{
-    font-family: 'M PLUS 2 Variable', sans-serif; grid-column: span 1; grid-row: span 1; background-color: rgba(255, 160, 122, 0.5); border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); display: flex; align-items: center; justify-content: center;
+    grid-column: 2/6;
+    grid-row: 4/5;
+    border-radius: 10px;
+}
+aside{
+    grid-column: 4/5;
+    grid-row: 2/5;
+    border-radius: 10px;
 }
 footer{
-    font-family: 'M PLUS 2 Variable', sans-serif; grid-column: span 3; grid-row: span 1; background-color: rgba(245, 245, 245, 0.5); border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25), 0 1px 2px rgba(0, 0, 0, 0.1); display: flex; align-items: center; justify-content: center;
+    grid-column: 5/1;
+    background-color: #3af5d1;
+    border-radius: 10px;
 }
-@media screen(max-width 600px){
-    .grid{
-        grid-template-columns: 1fr;
-    }
+
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  border-radius: 10px;
+  transition: all .3s;
+  cursor: pointer;
+  transition: transform 400ms, box-shadow 400ms;
+  background-color: #333; /* Fondo por defecto */
+}
+
+.switch-mode:hover {
+  box-shadow: 0 15px 25px rgba(216, 178, 53, 0.4);
+  animation:vibrate 1.5s linear both;
+}
+.card:hover{
+  box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+  animation:vibrate 1.5s linear both;
+}
+
+
+
+/* Estilos de los componentes del bento */
+
+/* Toogle */
+.app {
+    --light-col: #ffd753bd;
+    --dark-col: #26242e;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 4px 35px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: var(--light-col);
+    border-radius: 10px;
+    overflow: hidden;
+    user-select: none;
+  }
+  
+  .dark{
+    background-color: var(--dark-col);
+}
+  
+  nav {
+    display: flex;
+    justify-content: space-around;
+    padding: 10px 0;
+    width: 100%;
+  }
+  
+  .battery {
+    display: inline-block;
+    width: 0.85rem;
+    height: 0.45rem;
+    background-color: var(--dark-col);
+  }
+  
+  .network {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 6.8px 7.2px 6.8px;
+    border-color: transparent transparent var(--dark-col) transparent;
+    transform: rotate(135deg);
+  }
+  
+  /*circle*/
+  .circle {
+    position: relative;
+    border-radius: 100%;
+    width: 10rem;
+    height: 10rem;
+    background: linear-gradient(40deg, #ff0080, #ff8c00 70%);
+    margin: auto;
+  }
+  
+  .circle::before {
+    content: "";
+    position: absolute;
+    border-radius: 50%;
+    right: 0;
+    width: 8rem;
+    height: 8rem;
+    z-index: 1;
+    background: var(--bg);
+    transform: scale(0);
+    transform-origin: top right;
+    transition: 450ms;
+  }
+  
+.toggle-label{
+    width: auto;
+    margin: 20px 30px;
+    padding: 15px 35px;
+    background-color: rgba(255, 255, 255, 0.24);
+    border-radius: 50px;
+    position: relative;
+    cursor: pointer;
+    font-size: 1.1rem;
+    font-weight: bolder;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .toggle-label::before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    inset: 0;
+    border-radius: inherit;
+    display: block;
+    z-index: -1;
+    background-color: #ffffff;
+    box-shadow: 0 2px 15px rgba(228, 225, 225, 0.15);
+    -webkit-transition: -webkit-transform 0.3s
+      cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition: -webkit-transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition:
+      transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94),
+      -webkit-transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  }
+  
+  [type="checkbox"] {
+    display:none;
+  }
+  
+  [type="checkbox"]:checked + .app label span.light {
+    color: var(--light-col);
+  }
+  
+  [type="checkbox"]:checked + .app label::before {
+    transform: translateX(100%);
+  }
+  
+  [type="checkbox"]:checked + .app::before {
+    box-shadow: 0px 0px 0 150px var(--dark-col);
+  }
+  /* Circle */
+  [type="checkbox"]:checked + .app .circle::before {
+    transform: scale(1);
+    background: var(--dark-col);
+  }
+  
+  [type="checkbox"]:checked + .app .circle {
+    background: linear-gradient(40deg, #8983f7, #a3dafb 70%);
+  }
+  
+  [type="checkbox"]:checked + .app .time {
+    color: var(--light-col);
+  }
+  
+  [type="checkbox"]:checked + .app .icons .network {
+    border-bottom-color: var(--light-col);
+  }
+  
+  [type="checkbox"]:checked + .app .icons .battery {
+    background-color: var(--light-col);
+  }
+
+/* Insert Consult Generate*/
+.insert,.consult,.generate{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: .8rem;
+}
+.aside-content{
+  flex-direction: row;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  gap: .9rem;
+}
+.insert-img,.consult-img,.generate-img,.aside-img{
+  width: 3rem;
+  height: 3rem;
+}
+
+
+/* Animaciones */
+
+@keyframes vibrate
+{0%{transform:translate(0)}
+20%{transform:translate(-2px,2px)}
+40%{transform:translate(-2px,-2px)}
+60%{transform:translate(2px,2px)}
+80%{transform:translate(2px,-2px)}
+100%{transform:translate(0)}}
+
+@keyframes shake-left-right{
+  0%,
+  100%{transform:rotate(0deg);transform-origin:50% 50%}
+  10%{transform:rotate(8deg)}
+  20%,40%,60%{transform:rotate(-10deg)}
+  30%,50%,70%{transform:rotate(10deg)}
+  80%{transform:rotate(-8deg)}
+  90%{transform:rotate(8deg)}}
+/* Media query */
+@media (max-width: 600px) {
+  .container {
+      grid-template-columns: 1fr; 
+      grid-template-rows: 100px repeat(2,1fr) 100px;
+      height: calc(100dvh - 2rem);
+      width: calc(100dvw - 1rem);
+  }
+  header{
+      grid-column: 1;
+      grid-row: 1;
+  }
+  main {
+      grid-column: 1;
+      grid-row: 2;
+      display: grid;
+      grid-template-columns: repeat(4,1fr);
+      grid-template-rows: repeat(3,1fr);
+      gap: 8px; 
+  }
+  aside{
+      grid-column: 1;
+      grid-row: 3;
+  }
+  footer{
+      grid-column: 1;
+      grid-row: 4;
+  }
+  .insert{
+      grid-column: 1/6;
+      grid-row: 1/1;
+  }
+  .consult{
+      grid-column: 1/6;
+      grid-row: 2/2;
+  }
+  .switch-mode{
+      grid-column: 1/2;
+      grid-row: 3/3;
+  }
+  .generate{
+      grid-column: 2/6;
+      grid-row: 3/3;
+  }
+  .circle{
+    width: 6rem;
+    height: 6rem;
+  }
+  .circle::before{
+    width: 4.5rem;
+    height: 4.5rem;
+  }
 }
