--- a/css/insertar.css
+++ b/css/insertar.css
@@ -10,35 +10,72 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container{
+    background-color: cadetblue;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: 1fr 2fr 1fr;
-    height: calc(100dvh - 1.6rem);
-    width: calc(100dvw - 1.6rem);
-    margin: .5rem;
-    padding: .3rem;
     border-radius: 10px;
+    margin: 1rem;
+    padding: .5rem;
     gap: 10px;
 }
 header{
+    background-color: antiquewhite;
+    padding: 2rem;
+    border-radius: 10px;
     grid-column: 1/4;
 }
 main{
+    background-color: antiquewhite;
+    border-radius: 10px;
+    padding: 2rem;
     grid-column: 1/4;
-    grid-row: 2/4;
+    grid-row: 2/3;
 }
 footer{
+    background-color: antiquewhite;
+    border-radius: 10px;
+    padding: 2rem;
     grid-column: 1/4;
     grid-row: 4/3;
 }
-.form{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: .5rem;
+label{
+    margin-bottom: .2rem;
+    font-weight: bold;
+    padding: .2rem;
 }
-.form-input{
-    height: 40px;
+input, select, textarea {
+    padding: .6rem;
+    border: 2px solid #ccc;
     border-radius: 10px;
-    
+    font-size: 1.2rem;
+    width: 100%;
 }
+.form{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1.2rem;
+}
+.form-item{
+    display: flex;
+    flex-direction: column;
+}
+.last-row-container{
+    grid-column: 1/4;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.submit-btn{
+    grid-column: 1/-1;
+    justify-self: center;
+    padding: 1rem;
+    margin: .5rem;
+    border-radius: 10px;
+    width: 15rem;
+    height: 60px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    font-family: -apple-system, sans-serif;
+}
+
