--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+iframe{
+  border: none;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
 :root{
   /* Fondo principal */
   --bg-main-light: #f8f1e8;
@@ -39,7 +45,6 @@ body{
     font-size: 1.5rem;
     color: var(--text-main-light);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 /* Transiciones de estado */
 transition: background-color 0.5s ease, color 0.5s ease;
 
@@ -59,16 +64,16 @@ button{
     grid-template-rows: minmax(150px,auto) repeat(3,1fr) minmax(100px,auto);
     height: calc(100dvh - 1.6rem);
     width: calc(100dvw - 1.6rem);
-    margin: .5rem;
-    padding: .3rem;
     border-radius: 10px;
     gap: 10px;
 }
 header{
+    margin:.7rem;
     grid-column: 1/5;
     border-radius: 10px;
 }
 main{
+    margin: .8rem;
     grid-column: 1/4;
     grid-row: 2/5;
     border-radius: 10px;
@@ -97,11 +102,13 @@ main{
     border-radius: 10px;
 }
 aside{
+    margin: 1rem;
     grid-column: 4/5;
     grid-row: 2/5;
     border-radius: 10px;
 }
 footer{
+    margin: .5rem;
     grid-column: 1/5;
     grid-row: 5/6;
     border-radius: 10px;
@@ -109,10 +116,14 @@ footer{
 /* Barra de carga */
 
 .progress-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   background: rgba(13, 46, 230, 0.308);
   height: 10px;
-  border-radius: 10px;
+  display: none;
+  z-index: 1;
 }
 
 .progress {
@@ -121,7 +132,7 @@ footer{
   border-radius: 10px;
   background: rgb(71, 28, 226);
   transition: 0.5s;
-  animation: loading1274 2s ease infinite;
+  animation: loading1274 2.5s ease;
 }
 
 /* Botonera */
@@ -321,8 +332,6 @@ footer{
 }
 .aside-content{
   flex-direction: row;
-  height: 100%;
-  width: 100%;
   display: flex;
   gap: .9rem;
 }
