--- a/css/insertar.css
+++ b/css/insertar.css
@@ -13,7 +13,7 @@ body{
     background-color: cadetblue;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-rows: 100px 2fr 200px;
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
