--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,12 @@ button{
     gap: 10px;
 }
 header{
-    margin:.7rem;
+    margin: 0.3rem 0;
     grid-column: 1/5;
     border-radius: 10px;
 }
 main{
-    margin: .8rem;
+    margin-top: .1rem;
     grid-column: 1/4;
     grid-row: 2/5;
     border-radius: 10px;
@@ -102,7 +102,7 @@ main{
     border-radius: 10px;
 }
 aside{
-    margin: 1rem;
+    margin: .4rem;
     grid-column: 4/5;
     grid-row: 2/5;
     border-radius: 10px;
