--- a/css/consulta.css
+++ b/css/consulta.css
@@ -4,84 +4,117 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #a5f1f3;
-    color: #020202;
+    background-color: var(--bg-main-light);
+    color: var(--text-main-light);
     font-size: 1.3rem;
     font-weight: 700;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 120px 2fr 200px;
-    background-color: #f0f2f1;
+    grid-template-columns: 200px repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr) 150px;
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
     gap:10px;
+    height: 100vh;
 }
 header{
-    grid-column: 1/3;
+    grid-column: 2/5;
+    grid-row: 1/2;
     border-radius: 10px;
-    background-color: cadetblue;
 }
 main{
-    background-color: cadetblue;
     border-radius: 10px;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    grid-column: 2/5;
+    grid-row: 2/5;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 300px repeat(2,1fr);
+}
+aside{
+    border-radius: 10px;
+    grid-column: 1/2;
+    grid-row: 1/6;
 }
 footer{
     border-radius: 10px;
-    background-color: cadetblue;
-    grid-column: 1/3;
-    grid-row: 3/4;
+    grid-column: 2/5;
+    grid-row: 5/6;
 }
 label{
     margin-bottom: .2rem;
     font-weight: bold;
     padding: .2rem;
-    text-align: center;
+    text-align: flex-start;
 }
 input, select, textarea {
     padding: .8rem;
     border: 2px solid #ccc;
     border-radius: 10px;
     font-size: 1.2rem;
-    width: 100%;
+    width: 230px;
     height: 40px;
 }
-.section-1{
-    background-color: aquamarine;
+/* Estilos generales para el darkmode */
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
     border-radius: 10px;
-    width: auto;
-    margin: .5rem;
-    padding: .6rem;
+    transition: all .3s;
+    transition: transform 400ms, box-shadow 400ms;
+    background-color: var(--cards-light); /* Fondo por defecto */
+}
+.card:hover{
+    background-color: var(--hover-light);
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    animation:vibrate 1.5s linear both;
+}
+.card:active{
+    background-color: var(--active-light);
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+}
+
+.section-1{
+    padding: 1rem;
+    grid-column: 1/2;
+    grid-row: 1/4;
+    border-radius: 10px;
 }
 .section-2{
-    background-color: aquamarine;
+    grid-column: 2/5;
+    grid-row: 1/4;
     border-radius: 10px;
-    width: 100%;
-    margin: .5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 .form-item{
+    padding: 1rem;
+    padding: .5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: start;
 }
 .form-consult{
-    padding: .5rem;
-    margin: .5rem;
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
     flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
 }
 .consult-btn{
     margin-top: 2rem;
     background-color: rgb(37, 131, 37);
-    color: #f2f2f2;
+    color: var(--text-main-light);
     padding: 1rem;
     border-radius: 10px;
     width: 15rem;
@@ -92,4 +125,12 @@ input, select, textarea {
 }
 .consult-table{
     border-collapse: collapse;
+}
+.info-container{
+    margin: .8rem;
+    padding: .5rem;
+    border-radius: 10px;
+    width: 33%;
+    height: 95%;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
 }
