--- a/css/generar.css
+++ b/css/generar.css
@@ -4,50 +4,51 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #a5f1f3;
-    color: #020202;
+    background-color: var(--bg-main-light);
+    color: var(--text-main-light);
     font-size: 1.3rem;
     font-weight: 700;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-template-rows: 100px repeat(2,1fr) 150px;
-    background-color: #f0f2f1;
+    grid-template-columns: 200px repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr) 150px;
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
     gap:10px;
 }
 header{
-    grid-column: 1/3;
+    grid-column: 2/5;
+    grid-row: 1/2;
     border-radius: 10px;
-    background-color: aqua;
 }
 main{
     border-radius: 10px;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    background-color: aqua;
+    grid-column: 2/5;
+    grid-row: 2/4;
+}
+aside{
+    border-radius: 10px;
+    grid-column: 1/2;
+    grid-row: 1/6;
 }
 section{
     border-radius: 10px;
-    grid-column: 1/3;
-    grid-row: 3/4;
-    background-color: aqua;
+    grid-column: 2/5;
+    grid-row: 4/5;
 }
 label{
-    margin-bottom: .2rem;
+    margin-bottom: .2rem;   
     font-weight: bold;
     padding: .2rem;
     text-align: center;
 }
 footer{
     border-radius: 10px;
-    grid-column: 1/3;
-    grid-row: 4/5;
-    background-color: aqua;
+    grid-column: 2/5;
+    grid-row: 5/6;
 }
 input, select, textarea {
     padding: .6rem;
@@ -57,13 +58,26 @@ input, select, textarea {
     width: 300px;
     height: 40px;
 }
+
+/* Estilos generales para el darkmode */
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    transition: all .3s;
+    transition: transform 400ms, box-shadow 400ms;
+    background-color: var(--cards-light); /* Fondo por defecto */
+}
+
 .form-item{
     display: flex;
     flex-direction: column;
 }
 .form{
-    margin: .5rem;
-    padding: 1rem;
+    border-radius: 10px;
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -93,20 +107,16 @@ input, select, textarea {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
-    background-color: aqua;
 }
 .archive-container{
-    color: #f0f0f0;
     padding: 2rem;
     width: 65%;
     height: 90%;
     text-align: center;
     border-radius: 10px;
-    background-color: cadetblue;
 }
 .generate-btn{
-    background-color: rgb(37, 131, 37);
-    color: #f2f2f2;
+    color: var(--text-main-light);
     padding: 1rem;
     margin: .5rem;
     border-radius: 10px;
