--- a/css/insertar.css
+++ b/css/insertar.css
@@ -4,45 +4,46 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #f4f4f4;
-    font-size: 1rem;
+    background-color: var(--bg-main-light);
+    font-size: 1.5rem;
     font-weight: 650;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: var(--text-main-light);
 }
 .container{
-    background-color: cadetblue;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: 100px 2fr 200px;
+    grid-template-columns: 200px repeat(3,1fr);
+    grid-template-rows: repeat(4,1fr) 150px;
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
     gap: 10px;
 }
 header{
-    background-color: antiquewhite;
-    padding: 2rem;
     border-radius: 10px;
-    grid-column: 1/4;
+    grid-column: 2/5;
+    grid-row: 1/2;
 }
 main{
-    background-color: antiquewhite;
     border-radius: 10px;
-    padding: 2rem;
-    grid-column: 1/4;
-    grid-row: 2/3;
+    grid-column: 2/5;
+    grid-row: 2/5;
+}
+aside{
+    border-radius: 10px;
+    grid-column: 1/2;
+    grid-row: 1/6;
 }
 footer{
-    background-color: antiquewhite;
     border-radius: 10px;
-    padding: 2rem;
-    grid-column: 1/4;
-    grid-row: 4/3;
+    grid-column: 2/5;
+    grid-row: 5/6;
 }
 label{
     margin-bottom: .2rem;
     font-weight: bold;
     padding: .2rem;
+    text-align: start;
 }
 input, select, textarea {
     padding: .6rem;
@@ -51,14 +52,30 @@ input, select, textarea {
     font-size: 1.2rem;
     width: 100%;
 }
+/* Estilos generales para el darkmode */
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 10px;
+    transition: all .3s;
+    transition: transform 400ms, box-shadow 400ms;
+    background-color: var(--cards-light); /* Fondo por defecto */
+}
 .form{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 1.2rem;
+    padding: .8rem;
+    margin: .8rem;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
 }
 .form-item{
     display: flex;
     flex-direction: column;
+    padding: .5rem;
 }
 .last-row-container{
     grid-column: 1/4;
