--- a/css/styles.css
+++ b/css/styles.css
@@ -10,34 +10,6 @@ iframe{
   margin: 0;
   padding: 0;
 }
-:root{
-  /* Fondo principal */
-  --bg-main-light: #f8f1e8;
-  /* Cards */
-  --cards-light: #cac1c1;
-  /* Texto principal */
-  --text-main-light: #262626;
-  /* Fondo interactivo */
-  --bg-interactive-light: #3af5d1;
-  /* hover */
-  --hover-light: #eba716;
-  /* active */
-  --active-light: #b44e26;
-  /* Tema oscuro */
-
-  /* Fondo Principal */
-  --bg-main-dark: #1f1f1f;
-  /* Cards */
-  --cards-dark: #26242e;
-  /* Texto Principal */
-  --text-main-dark: #eaeaea;
-  /* Fondo interactivo */
-  --bg-interactive-dark: #8983f7;
-  /* hover */
-  --hover-dark: #a86109;
-  /* active */
-  --active-dark: #863117;
-}
 
 body{
     background-color: var(--bg-main-light);
@@ -45,12 +17,7 @@ body{
     font-size: 1.5rem;
     color: var(--text-main-light);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-/* Transiciones de estado */
-transition: background-color 0.5s ease, color 0.5s ease;
 
-[data-theme="dark"]{
-  transition: background-color 0.5s ease, color 0.5s ease;
-}
 }
 button{
   border: none;
@@ -62,18 +29,18 @@ button{
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: minmax(150px,auto) repeat(3,1fr) minmax(100px,auto);
-    height: calc(100dvh - 1.6rem);
-    width: calc(100dvw - 1.6rem);
+    height: 100vh;
+    width: 100vw;
     border-radius: 10px;
     gap: 10px;
 }
 header{
-    margin: 0.3rem 0;
+    margin: .5rem;
     grid-column: 1/5;
     border-radius: 10px;
 }
 main{
-    margin-top: .1rem;
+    margin: .5rem;
     grid-column: 1/4;
     grid-row: 2/5;
     border-radius: 10px;
@@ -102,7 +69,7 @@ main{
     border-radius: 10px;
 }
 aside{
-    margin: .4rem;
+    margin: .5rem;
     grid-column: 4/5;
     grid-row: 2/5;
     border-radius: 10px;
@@ -164,18 +131,6 @@ footer{
 .card:active{
   background-color: var(--active-light);
   box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-}
-
-/* Dark mode */
-.dark-card{
-  background-color: var(--cards-dark);
-  color: var(--text-main-dark);
-}
-.dark-card:hover{
-  background-color: var(--hover-dark);
-}
-.dark-card:active{
-  background-color: var(--active-dark);
 }
 
 /* Estilos de los componentes del bento */
@@ -339,49 +294,6 @@ footer{
   width: 3rem;
   height: 3rem;
 }
-
-/* Animaciones */
-
-@keyframes vibrate
-{0%{transform:translate(0)}
-20%{transform:translate(-2px,2px)}
-40%{transform:translate(-2px,-2px)}
-60%{transform:translate(2px,2px)}
-80%{transform:translate(2px,-2px)}
-100%{transform:translate(0)}}
-
-@keyframes shake-left-right{
-  0%,
-  100%{transform:rotate(0deg);transform-origin:50% 50%}
-  10%{transform:rotate(8deg)}
-  20%,40%,60%{transform:rotate(-10deg)}
-  30%,50%,70%{transform:rotate(10deg)}
-  80%{transform:rotate(-8deg)}
-  90%{transform:rotate(8deg)}
-}
-
-@keyframes loading1274 {
-  0% {
-    width: 0%;
-  }
-
-  10% {
-    width: 10%;
-  }
-
-  50% {
-    width: 40%;
-  }
-
-  60% {
-    width: 60%;
-  }
-
-  100% {
-    width: 100%;
-  }
-}
-
 
 /* Media query */
 
