--- a/css/insertar.css
+++ b/css/insertar.css
@@ -13,7 +13,7 @@ body{
 .container{
     display: grid;
     grid-template-columns: 200px repeat(3,1fr);
-    grid-template-rows: repeat(4,1fr) 150px;
+    grid-template-rows: 150px repeat(3,1fr) 150px;
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
@@ -39,19 +39,6 @@ footer{
     grid-column: 2/5;
     grid-row: 5/6;
 }
-label{
-    margin-bottom: .2rem;
-    font-weight: bold;
-    padding: .2rem;
-    text-align: start;
-}
-input, select, textarea {
-    padding: .6rem;
-    border: 2px solid #ccc;
-    border-radius: 10px;
-    font-size: 1.2rem;
-    width: 100%;
-}
 /* Estilos generales para el darkmode */
 .card {
     display: flex;
@@ -64,6 +51,7 @@ input, select, textarea {
     transition: transform 400ms, box-shadow 400ms;
     background-color: var(--cards-light); /* Fondo por defecto */
 }
+/* Estilos para el formulario */
 .form{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -77,22 +65,157 @@ input, select, textarea {
     flex-direction: column;
     padding: .5rem;
 }
-.last-row-container{
-    grid-column: 1/4;
-    display: flex;
-    justify-content: space-evenly;
+
+.formulario__label {
+	display: block;
+	font-weight: 600;
+	padding: 5px 0;
+	cursor: pointer;
 }
 
-.submit-btn{
-    grid-column: 1/-1;
-    justify-self: center;
-    padding: 1rem;
-    margin: .5rem;
-    border-radius: 10px;
-    width: 15rem;
-    height: 60px;
-    font-size: 1.2rem;
-    font-weight: 700;
-    font-family: -apple-system, sans-serif;
+.formulario__label:hover{
+	color: var(--color-primary);
+	transition: .3s ease-in;
 }
 
+.formulario__grupo-input {
+	position: relative;
+}
+
+.formulario__input {
+	transition: all 0.2s ease;
+	outline: none;
+	width: 100%;
+	background: var(--form-input-background);
+	color: var(--form-input-text);
+	border: 2px solid #264143;
+	border-radius: 4px;
+	font-size: 15px;
+	height: 45px;
+	line-height: 45px;
+	padding: 0 25px 0 10px;
+	transition: .3s ease all;
+}
+
+.formulario__input:focus {
+	border: 3px solid var(--form-input-focus);
+	outline: none;
+	box-shadow: 3px 0px 30px rgba(163,163,163, 0.4);
+}
+.fomrmulario__input:focus-visible{
+	outline: 3px solid
+	var(--color-primary);
+	box-shadow: 0 0 10px
+	var(--color-primary);
+}
+.formulario__input, .formulario__btn{
+	transition: all 0.3s ease-in-out;
+}
+.formulario__input::placeholder{
+	color: var(--color-shadow);
+	font-style: italic;
+}
+
+.formulario__input-error {
+	font-size: 12px;
+	margin-bottom: 0;
+	display: none;
+}
+
+.formulario__input-error-activo {
+	display: block;
+}
+
+.formulario__validacion-estado {
+	position: absolute;
+	right: 10px;
+	bottom: 15px;
+	z-index: 2;
+	font-size: 16px;
+	opacity: 0;
+}
+
+.formulario__checkbox {
+	margin-right: 10px;
+}
+
+.formulario__grupo-terminos, 
+.formulario__mensaje,
+.formulario__grupo-btn-enviar {
+	grid-column: span 1;
+}
+
+.formulario__mensaje {
+	height: 45px;
+	line-height: 45px;
+	background: #F66060;
+	padding: 0 15px;
+	border-radius: 3px;
+	display: none;
+}
+
+.formulario__mensaje-activo {
+	display: block;
+}
+
+.formulario__mensaje p {
+	margin: 0;
+}
+
+.formulario__grupo-btn-enviar {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.formulario__btn {
+	padding: 15px;
+	margin: 25px 0px;
+	width: 75%;
+	font-size: 15px;
+	background: var(--button-background);
+	color: var(--button-text);
+	border-radius: 10px;
+	border: none;
+	font-weight: 800;
+	box-shadow: 3px 3px 0px 0px var(--button-hover);
+}
+
+.formulario__btn:hover {
+	background: #145214;
+	color: #f2f2f2;
+	box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario__btn:focus-visible{
+	outline: 3px solid
+	var(--color-primary);
+}
+
+.formulario__mensaje-exito {
+	font-size: 14px;
+	color: #119200;
+	display: none;
+}
+
+.formulario__mensaje-exito-activo {
+	display: block;
+}
+
+/* ----- -----  Estilos para Validacion ----- ----- */
+.formulario__grupo-correcto .formulario__validacion-estado {
+	color: #1ed12d;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+	color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+	color: #bb2929;
+	opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+	border: 3px solid #bb2929;
+}
