--- a/css/consulta.css
+++ b/css/consulta.css
@@ -12,8 +12,8 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: 200px repeat(3,1fr);
-    grid-template-rows: repeat(4,1fr) 150px;
+    grid-template-columns: 250px repeat(3,1fr);
+    grid-template-rows: 150px repeat(3,1fr) 150px;
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
@@ -28,7 +28,6 @@ header{
 main{
     border-radius: 10px;
     grid-column: 2/5;
-    grid-row: 2/5;
     display: grid;
     gap: 10px;
     grid-template-columns: 300px repeat(2,1fr);
@@ -54,8 +53,7 @@ input, select, textarea {
     border: 2px solid #ccc;
     border-radius: 10px;
     font-size: 1.2rem;
-    width: 230px;
-    height: 40px;
+    height: 60px;
 }
 /* Estilos generales para el darkmode */
 .card {
@@ -69,46 +67,33 @@ input, select, textarea {
     transition: transform 400ms, box-shadow 400ms;
     background-color: var(--cards-light); /* Fondo por defecto */
 }
-.card:hover{
-    background-color: var(--hover-light);
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-    animation:vibrate 1.5s linear both;
-}
-.card:active{
-    background-color: var(--active-light);
-    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
-}
-
 .section-1{
-    padding: 1rem;
     grid-column: 1/2;
-    grid-row: 1/4;
+    grid-row: 1/5;
     border-radius: 10px;
 }
 .section-2{
     grid-column: 2/5;
-    grid-row: 1/4;
+    grid-row: 1/5;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 10px;
 }
 .form-item{
-    padding: 1rem;
-    padding: .5rem;
+    padding: .8rem;
+    padding: .4rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
 }
 .form-consult{
-    height: 100%;
-    width: 100%;
-    padding: 1rem;
-    flex-direction: column;
+    margin: .8rem;
+    padding: .5rem;
     border-radius: 10px;
+    height: 95%;
+    width: 95%;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
 }
 .consult-btn{
@@ -122,9 +107,7 @@ input, select, textarea {
     font-size: 1.2rem;
     font-weight: 700;
     font-family: -apple-system, sans-serif;
-}
-.consult-table{
-    border-collapse: collapse;
+    cursor: pointer;
 }
 .info-container{
     margin: .8rem;
@@ -133,4 +116,26 @@ input, select, textarea {
     width: 33%;
     height: 95%;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+}
+.form-btn{
+    padding: 1rem;
+    margin: .3rem;
+    color: var(--text-main-light);
+    height: 60px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: -apple-system, sans-serif;
+    text-align: center;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    border: none;
+    cursor: pointer;
+}
+.form-text{
+    font-size: 1.3rem;
+    font-weight: 500;
+    font-family: -apple-system, sans-serif;
+    text-align: center;
+    margin: .5rem;
 }
