--- a/css/generar.css
+++ b/css/generar.css
@@ -27,8 +27,8 @@ header{
 }
 main{
     border-radius: 10px;
-    grid-column: 2/5;
-    grid-row: 2/4;
+    grid-column: 2/3;
+    grid-row: 2/5;
 }
 aside{
     border-radius: 10px;
@@ -37,8 +37,8 @@ aside{
 }
 section{
     border-radius: 10px;
-    grid-column: 2/5;
-    grid-row: 4/5;
+    grid-column: 3/5;
+    grid-row: 2/5;
 }
 label{
     margin-bottom: .2rem;   
@@ -52,11 +52,11 @@ footer{
     grid-row: 5/6;
 }
 input, select, textarea {
-    padding: .6rem;
+    padding: .8rem;
     border: 2px solid #ccc;
     border-radius: 10px;
     font-size: 1.2rem;
-    width: 300px;
+    width: 270px;
     height: 40px;
 }
 
@@ -72,8 +72,11 @@ input, select, textarea {
 }
 
 .form-item{
+    padding: 1rem;
+    padding: .5rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .form{
     border-radius: 10px;
@@ -126,4 +129,26 @@ input, select, textarea {
     font-size: 1.2rem;
     font-weight: 700;
     font-family: -apple-system, sans-serif;
+    cursor: pointer;
+}
+.form-btn{
+    padding: 1rem;
+    margin: .3rem;
+    color: var(--text-main-light);
+    height: 60px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: -apple-system, sans-serif;
+    text-align: center;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    border: none;
+    cursor: pointer;
+}
+.form-text{
+    font-size: 2rem;
+    font-weight: 400;
+    font-family: -apple-system, sans-serif;
+    text-align: start;
 }
