--- a/css/consulta.css
+++ b/css/consulta.css
@@ -13,11 +13,11 @@ body{
 .container{
     display: grid;
     grid-template-columns: 250px repeat(3,1fr);
-    grid-template-rows: 150px repeat(3,1fr) 150px;
+    /* grid-template-rows: 150px repeat(2,1fr) 150px; */
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
-    gap:10px;
+    gap:15px;
     height: 100vh;
 }
 header{
@@ -28,19 +28,21 @@ header{
 main{
     border-radius: 10px;
     grid-column: 2/5;
+    grid-row: 2/4;
     display: grid;
-    gap: 10px;
+    gap: 15px;
     grid-template-columns: 300px repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr) 100px;
 }
 aside{
     border-radius: 10px;
     grid-column: 1/2;
-    grid-row: 1/6;
+    grid-row: 1/5;
 }
 footer{
     border-radius: 10px;
     grid-column: 2/5;
-    grid-row: 5/6;
+    grid-row: 4/5;
 }
 label{
     margin-bottom: .2rem;
@@ -54,6 +56,26 @@ input, select, textarea {
     border-radius: 10px;
     font-size: 1.2rem;
     height: 60px;
+}
+/* Barra de carga */
+.progress-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(13, 46, 230, 0.308);
+    height: 10px;
+    display: none;
+    z-index: 1;
+}
+
+.progress {
+    content: '';
+    height: 10px;
+    border-radius: 10px;
+    background: rgb(71, 28, 226);
+    transition: 0.5s;
+    animation: loading1274 2.5s ease;
 }
 /* Estilos generales para el darkmode */
 .card {
@@ -69,17 +91,22 @@ input, select, textarea {
 }
 .section-1{
     grid-column: 1/2;
-    grid-row: 1/5;
+    grid-row: 1/3;
     border-radius: 10px;
 }
 .section-2{
     grid-column: 2/5;
-    grid-row: 1/5;
+    grid-row: 1/3;
     border-radius: 10px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+}
+.section-3{
+    grid-column: 1/5;
+    grid-row: 3/4;
 }
 .form-item{
     padding: .8rem;
@@ -89,8 +116,6 @@ input, select, textarea {
     justify-content: center;
 }
 .form-consult{
-    margin: .8rem;
-    padding: .5rem;
     border-radius: 10px;
     height: 95%;
     width: 95%;
@@ -109,13 +134,40 @@ input, select, textarea {
     font-family: -apple-system, sans-serif;
     cursor: pointer;
 }
+.generate-consult-btn{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border:none;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    cursor: pointer;
+}
+.reset-consult-btn{
+    display:none;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border:none;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    cursor: pointer;
+}
+.generate-consult-btn:hover{
+    transform: scale(1);
+    transition: ease-in .5s;
+}
 .info-container{
     margin: .8rem;
-    padding: .5rem;
+    padding: 1rem;
     border-radius: 10px;
-    width: 33%;
-    height: 95%;
     box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 95%; 
+    width: 45%;
 }
 .form-btn{
     padding: 1rem;
@@ -138,4 +190,54 @@ input, select, textarea {
     font-family: -apple-system, sans-serif;
     text-align: center;
     margin: .5rem;
+}
+.year-container{
+    cursor: pointer;
+    margin: .4rem;
+    padding: .5rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 50px;
+    width: 180px;
+    font-size: 1.4rem;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    font-weight: 700;
+}
+.mes-container{
+    cursor: pointer;
+    margin: .4rem;
+    padding: 3px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 50px;
+    width: 190px;
+    font-size: 1.4rem;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    font-weight: 700;
+}
+.ul-previsional,.ul-empleado{
+    margin: 1rem;
+}
+.li-empleado,.li-previsional{
+    margin: 1.3rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 50px;
+    font-size: 1.2rem;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    list-style: none;
+    text-align: center;
+}
+.empleado-text,.previsional-text{
+    font-size: 2.2rem;
+    font-weight: 550;
+}
+.ul-text{
+    text-align: center;
+    padding: .9rem;
 }
