--- a/css/generar.css
+++ b/css/generar.css
@@ -12,12 +12,12 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: 200px repeat(3,1fr);
-    grid-template-rows: repeat(4,1fr) 150px;
+    grid-template-columns: 250px repeat(3,1fr);
+    /* grid-template-rows: 150px repeat(2,1fr) 150px; */
     border-radius: 10px;
     margin: 1rem;
     padding: .5rem;
-    gap:10px;
+    gap:15px;
     height: 100vh;
 }
 header{
@@ -27,18 +27,17 @@ header{
 }
 main{
     border-radius: 10px;
-    grid-column: 2/3;
-    grid-row: 2/5;
+    grid-column: 2/5;
+    grid-row: 2/4;
+    display: grid;
+    gap: 15px;
+    grid-template-columns: 300px repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr) 100px;
 }
 aside{
     border-radius: 10px;
     grid-column: 1/2;
     grid-row: 1/6;
-}
-section{
-    border-radius: 10px;
-    grid-column: 3/5;
-    grid-row: 2/5;
 }
 label{
     margin-bottom: .2rem;   
@@ -49,7 +48,7 @@ label{
 footer{
     border-radius: 10px;
     grid-column: 2/5;
-    grid-row: 5/6;
+    grid-row: 4/5 ;
 }
 input, select, textarea {
     padding: .8rem;
@@ -59,7 +58,26 @@ input, select, textarea {
     width: 270px;
     height: 40px;
 }
+/* Barra de carga */
+.progress-loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: rgba(13, 46, 230, 0.308);
+    height: 10px;
+    display: none;
+    z-index: 1;
+}
 
+.progress {
+    content: '';
+    height: 10px;
+    border-radius: 10px;
+    background: rgb(71, 28, 226);
+    transition: 0.5s;
+    animation: loading1274 2.5s ease;
+}
 /* Estilos generales para el darkmode */
 .card {
     display: flex;
@@ -106,11 +124,24 @@ input, select, textarea {
     font-weight: 700;
     font-family: -apple-system, sans-serif;
 }
-.generate-container{
+.section-1{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    border-radius: 10px;
+}
+.section-2{
+    grid-column: 2/5;
+    grid-row: 1/3;
+    border-radius: 10px;
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    flex-wrap: wrap;
+}
+.section-3{
+    grid-column: 1/5;
+    grid-row: 3/4;
 }
 .archive-container{
     padding: 2rem;
@@ -151,4 +182,61 @@ input, select, textarea {
     font-weight: 400;
     font-family: -apple-system, sans-serif;
     text-align: start;
+}
+.info-container{
+    margin: .8rem;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 95%; 
+    width: 45%;
+}
+.year-container{
+    cursor: pointer;
+    margin: .4rem;
+    padding: .5rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 50px;
+    width: 180px;
+    font-size: 1.4rem;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    font-weight: 700;
+}
+.mes-container{
+    cursor: pointer;
+    margin: .4rem;
+    padding: 3px;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    height: 50px;
+    width: 190px;
+    font-size: 1.4rem;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    font-weight: 700;
+}
+.generate-consult-btn{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border:none;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    cursor: pointer;
+}
+.reset-consult-btn{
+    display:none;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    border:none;
+    box-shadow: 0 10px 20px rgba(68, 68, 68, 0.4);
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: Ubuntu,-apple-system, sans-serif;
+    cursor: pointer;
 }
