--- a/css/insertar.css
+++ b/css/insertar.css
@@ -234,3 +234,147 @@ footer{
 .formulario__grupo-incorrecto .formulario__input {
 	border: 3px solid #bb2929;
 }
+
+/* Alerts Dinamicos*/
+/* Contenedor del Alert del formulario/errores */
+.alert-overlay{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0,0,0,0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 3;
+}
+
+.custom-alert{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	padding: 0rem 0rem 1rem 0rem;
+	display: flex;
+	flex-direction: column;
+	border-radius: 10px;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--text-main-light);
+	color: var(--form-input-text);
+	width: 90%;
+	height: 60%;
+	max-width: 500px;
+	text-align: center;
+}
+.text-input-container{
+	background-color: #1b69cf;
+	border-radius: 10px;
+	padding: .5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+/* .alert-progress-bar{
+	width: 100%;
+	height: 20px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+.bar-content{
+	display: block;
+	animation: progress-animation linear 5s;
+	width: 100%;
+	height: 18px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+} */
+.green1{
+	background-color: var(--color-secondary);
+}
+.green{
+	background-color: var(--color-primary);
+}
+.red1{
+	background-color:  #ff4242;
+}
+.red{
+	background-color: #d31414
+}
+.blue1{
+	background-color: #1877F2;
+}
+.blue{
+	background-color: #7baff3;
+}
+
+.alert-img{
+	width: 150px;
+	height: 150px;
+	border-radius: 10px;
+	margin-bottom: .1rem;
+}
+.alert-text{
+	padding: .6rem ;
+	margin: 0 1rem;
+	background-color: var(--button-background);
+	border-radius: 10px;
+	color: var(--button-text);
+	text-align: center;
+	font-size: 1.6rem;
+	font-weight: bold;
+}
+
+.alert-text-error{
+	padding: 1rem ;
+	margin: 0 1rem;
+	background-color: #bb2929;
+	border-radius: 10px;
+	color: var(--button-text);
+	text-align: center;
+	font-size: 1.5rem;
+	font-weight: bold;
+	
+}
+.alert-text-info{
+	padding: 1rem ;
+	margin: 0 1rem;
+	background-color: #1b69cf;
+	border-radius: 10px;
+	color: var(--button-text);
+	text-align: center;
+	font-size: 1.5rem;
+	font-weight: bold;
+	
+}
+
+.custom-alert-error{
+	box-shadow: 2px 2px 8px 4px #7a2323;
+}
+.custom-alert-success{
+	box-shadow: 2px 2px 8px 4px var(--button-hover);
+}
+.custom-alert-info{
+	box-shadow: 2px 2px 8px 4px #5994e0;
+}
+.alert-input{
+	border-radius: 10px;
+	height: 50px;
+	width: 100px;
+	border:none;
+	text-align: center;
+	font-size: 1rem;
+}
+.boton-input{
+	border-radius: 10px;
+	width: 150px;
+	height: 40px;
+	margin: .7rem;
+	padding: .3rem;
+	font-size: 1.2rem;
+	font-weight: 700;
+	border: none;
+}
